--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,9 +162,9 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-#buy-tickets .text-center  {
+ .text-center  {
   padding-top: 10px;
-  padding-left: 20px;
+
 }
 
 .buy-tickets {
