--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1492,9 +1492,23 @@ label {
     font-size: 20px;
     font-weight: 400;
     
-  
 }
 
+@media (max-width: 460px) {
 
-
+.fixed-bar {
+    width: 200px;
+    border-radius: 25px;
+    color: white;
+    text-align: center;
+    background-color: indianred;
+    position: fixed;
+    right: 0px;
+    z-index: 99999;
+    top: 50%;
+    font-size: 15px;
+    font-weight: 300;
+    
+}
+}
 
