--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ p {
   margin: 0 0 30px 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {her
   font-family: "Raleway", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -169,11 +169,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .buy-tickets {
   color: #fff;
-  background: #C6B42E;
+  background: #FFCC33;
   padding: 7px 22px;
   margin: 0 0 0 15px;
   border-radius: 50px;
-  border: 2px solid #C6B42E;
+  border: 2px solid #FFCC33;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
   line-height: 1;
@@ -218,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: rgba(202, 206, 221, 0.8);
+  color: #fff;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
@@ -415,7 +415,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero:before {
   content: "";
-  background: rgba(6, 12, 34, 0.5);
+  background: rgba(6, 12, 34, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -456,7 +456,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   font-family: "Raleway", sans-serif;
   font-size: 50px;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
 }
 #hero h1 span {
@@ -480,7 +480,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#8A96A8 50%, #C6B42E 52%);
+  background: radial-gradient(#8A96A8 50%, #FFCC33 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -496,7 +496,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 15px solid #C6B42E;
+  border-left: 15px solid #FFCC33;
   z-index: 100;
   transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
@@ -520,10 +520,10 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #C6B42E;
   top: -15%;
   left: -15%;
-  background: #C6B42E;
+  background: #FFCC33;
 }
 #hero .play-btn:hover::after {
-  border-left: 15px solid #C6B42E;
+  border-left: 15px solid #FFCC33;
   transform: scale(20);
 }
 #hero .play-btn:hover::before {
@@ -557,10 +557,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #C6B42E;
+  border: 2px solid #FFCC33;
 }
 #hero .about-btn:hover {
-  background: #C6B42E;
+  background: #FFCC33;
   color: #fff;
 }
 
@@ -1176,12 +1176,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #C6B42E;
+  background-color: #edb60f;
   border: 0;
-  color: #fff;
+  color: #000080;
 }
 #buy-tickets .card .btn:hover {
-  background-color: #C6B42E;
+  background-color: #edb60f;
 }
 #buy-tickets #buy-ticket-modal input, #buy-tickets #buy-ticket-modal select {
   border-radius: 0;
@@ -1191,19 +1191,19 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #C6B42E;
+  background-color: #edb60f;
   border: 0;
   color: #fff;
 }
 #buy-tickets #buy-ticket-modal .btn:hover {
-  background-color: #C6B42E;
+  background-color: #edb60f;
 }
 .btn {
   font-size: 15px;
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #C6B42E;
+  background-color: #edb60f;
   border: 0;
   color: #fff;
 }
