--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -402,11 +402,18 @@ h1, h2, h3, h4, h5, h6 {her
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background: url(../img/banner.jpg) top left;
-  background-size: cover;
+  background-size:contain;
   overflow: hidden;
   position: relative;
+}
+
+@media (max-width: 991px) {
+  #hero  {
+    height: 100vh;
+    background-size:cover;
+  }
 }
 @media (min-width: 1024px) {
   #hero {
@@ -415,7 +422,7 @@ h1, h2, h3, h4, h5, h6 {her
 }
 #hero:before {
   content: "";
-  background: rgba(6, 12, 34, 0.6);
+  background: rgba(6, 12, 34, 0.4);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -426,7 +433,7 @@ h1, h2, h3, h4, h5, h6 {her
   position: absolute;
   bottom: 0;
   left: 0;
-  top: 90px;
+  top: 40px;
   right: 0;
   display: flex;
   justify-content: center;
@@ -437,13 +444,13 @@ h1, h2, h3, h4, h5, h6 {her
 }
 @media (max-width: 991px) {
   #hero .hero-container {
-    top: 70px;
+    top: 60px;
   }
 }
 @media (max-width: 400px) {
   #hero h1{
     color: #fff;
-    font-family: "Raleway", sans-serif;
+    font-family: "Arial", sans-serif;
     font-size: 30px;
     font-weight: 500;
     text-transform: uppercase;
@@ -454,8 +461,8 @@ h1, h2, h3, h4, h5, h6 {her
 
 #hero h1 {
   color: #fff;
-  font-family: "Raleway", sans-serif;
-  font-size: 50px;
+  font-family: "Arial", sans-serif;
+  font-size: 40px;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -544,7 +551,7 @@ h1, h2, h3, h4, h5, h6 {her
   border-radius: 0;
 }
 #hero .about-btn {
-  font-family: "Raleway", sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -589,12 +596,11 @@ h1, h2, h3, h4, h5, h6 {her
 # About Section
 --------------------------------------------------------------*/
 #about {
-  background: url("../img/banner.jpg");
-  background-size: cover;
+  
   overflow: hidden;
   position: relative;
   color: #fff;
-  padding: 60px 0 40px 0;
+  padding: 30px 0 40px 0;
 }
 @media (min-width: 1024px) {
   #about {
@@ -603,7 +609,7 @@ h1, h2, h3, h4, h5, h6 {her
 }
 #about:before {
   content: "";
-  background: rgba(13, 20, 41, 0.8);
+  background: #FFF;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -614,26 +620,26 @@ h1, h2, h3, h4, h5, h6 {her
   font-size: 36px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #C6B42E;
+  color: rgb(6 12 34 / 98%);
 }
 #about h3 {
   font-size: 18px;
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 10px;
-  color: #fff;
+  color: #000080;
 }
 #about p {
   font-size: 14px;
   margin-bottom: 20px;
-  color: #fff;
+  color: #000080;
 }
-
 /*--------------------------------------------------------------
-# Speakers Section
+# AIM Objective outcome session
 --------------------------------------------------------------*/
+
 #test{
-  padding: 60px 0 30px 0;
+  padding: 30px 0 0px 0;
 }
 #test p{
   
@@ -650,9 +656,31 @@ h1, h2, h3, h4, h5, h6 {her
   margin-bottom: 10px;
 }
 
-#speakers {
-  padding: 60px 0 30px 0;
+
+@media (max-width: 400px) {
+  #test ul li {
+    margin-left: 5px ;
+    margin-right: 5px;
+  }
 }
+/*--------------------------------------------------------------
+# Speakers Section
+--------------------------------------------------------------*/
+
+
+#speakers {
+  padding: 30px 0 30px 0;
+}
+
+#speakers .speaker img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  object-fit: cover;
+  
+}
+
 #speakers .speaker {
   position: relative;
   overflow: hidden;
@@ -665,15 +693,16 @@ h1, h2, h3, h4, h5, h6 {her
   bottom: -40px;
   right: 0;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 0px;
   transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 #speakers .speaker .details h3 {
   color: #fff;
-  font-size: 22px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  padding-bottom: 10px;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom:0px;
 }
 #speakers .speaker .details p {
   color: #fff;
@@ -682,11 +711,11 @@ h1, h2, h3, h4, h5, h6 {her
   font-style: italic;
 }
 #speakers .speaker .details .social {
-  height: 60px;
+  height: 45px;
 }
 #speakers .speaker .details .social p {
-  padding-top: 15px;
-  padding-bottom: 5px;
+  padding-top: 0px;
+  padding-bottom: 10px;
 }
 #speakers .speaker .details .social i {
   line-height: 0;
@@ -703,7 +732,7 @@ h1, h2, h3, h4, h5, h6 {her
 }
 
 #speakers-details {
-  padding: 60px 0;
+  padding: 40px 0;
 }
 #speakers-details .details h2 {
   color: #112363;
@@ -745,7 +774,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Schedule Section
 --------------------------------------------------------------*/
 #schedule {
-  padding: 60px 0 60px 0;
+  padding: 30px 0 60px 0;
 }
 #schedule .nav-tabs {
   text-align: center;
@@ -847,7 +876,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Venue Section
 --------------------------------------------------------------*/
 #venue {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 #venue p{
  
@@ -912,7 +941,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Hotels Section
 --------------------------------------------------------------*/
 #hotels {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 #hotels .hotel {
   border: 1px solid #e0e5fa;
@@ -953,7 +982,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Gallery Section
 --------------------------------------------------------------*/
 #gallery {
-  padding: 60px;
+  padding: 30px;
   overflow: hidden;
 }
 #gallery .swiper-pagination {
@@ -995,7 +1024,7 @@ h1, h2, h3, h4, h5, h6 {her
 
 
 #paper {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 #supporters .supporters-wrap {
   border-top: 1px solid #e0e5fa;
@@ -1024,7 +1053,7 @@ h1, h2, h3, h4, h5, h6 {her
 # F.A.Q Section
 --------------------------------------------------------------*/
 #faq {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 #faq .faq-list {
   padding: 0;
@@ -1079,7 +1108,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Subscribe Section
 --------------------------------------------------------------*/
 #subscribe {
-  padding: 60px;
+  padding: 30px;
   background: url(../img/subscribe-bg.jpg) center center no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -1141,7 +1170,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Buy Tickets Section
 --------------------------------------------------------------*/
 #buy-tickets {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 #buy-tickets .card {
   border: none;
@@ -1211,7 +1240,7 @@ h1, h2, h3, h4, h5, h6 {her
 # Contact Section
 --------------------------------------------------------------*/
 #contact {
-  padding: 60px 0;
+  padding: 3s0px 0;
 }
 #contact .contact-info {
   margin-bottom: 20px;
@@ -1479,64 +1508,37 @@ h1, h2, h3, h4, h5, h6 {her
 }
 
 
-
-
 #countdown {
-  width: 100%;
+  width: 50%;
 }
-label {
+#countdown  label {
   clear: both;
   display: block;
 }
 #countdown span {
   color: #FFF;
   font-size: 26px;
-  font-weight: normal;
+  font-weight: 500;
   text-align: center;
   width: 25%;
-  dispaly: block;
+  display: block;
   float: left;
   border-right: 1px solid #FFF;
 }
 #countdown span:last-child {
-  border-right: 1px solid #313233;
+  border-right: 0px solid #313233;
+}
+
+@media (max-width: 991px) {
+  #countdown {
+    width: 100%;
+  }
 }
 
 
-
-
-.fixed-bar {
-    width: 280px;
-    border-radius: 25px;
-    color: white;
-    text-align: center;
-    background-color: indianred;
-    position: fixed;
-    left: 0px;
-    z-index: 99999;
-    top: 70%;
-    font-size: 20px;
-    font-weight: 400;
-    
-}
-
-@media (max-width: 460px) {
-
-.fixed-bar {
-    width: 150px;
-    border-radius: 25px;
-    color: white;
-    text-align: center;
-    background-color: indianred;
-    position: fixed;
-    left: 10px;
-    z-index: 99999;
-    top: 93%;
-    font-size: 13px;
-    font-weight: 300;
-    
-}
 }
 #logo {
   width: 250px;
 }
+
+
