--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,9 +651,9 @@ h1, h2, h3, h4, h5, h6 {her
   margin-left: 60px ;
   margin-right: 60px;
   color: #112363;
-  font-size: 20px;
-  font-weight: 400;
-  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: normal;
 }
 
 
