--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,8 @@ h1, h2, h3, h4, h5, h6 {her
   transition: all 0.5s;
   z-index: 997;
 }
-#header.header-scrolled, #header.header-inner {
+#header.header-scrolled, 
+#header.header-inner {
   background: rgba(6, 12, 34, 0.98);
   height: 70px;
 }
@@ -140,7 +141,8 @@ h1, h2, h3, h4, h5, h6 {her
 #header #logo h1 span {
   color: #C6B42E;
 }
-#header #logo h1 a, #header #logo h1 a:hover {
+#header #logo h1 a, 
+#header #logo h1 a:hover {
   color: #fff;
 }
 #header #logo img {
@@ -214,7 +216,8 @@ h1, h2, h3, h4, h5, h6 {her
   white-space: nowrap;
   padding: 10px 0 10px 12px;
 }
-.navbar a, .navbar a:focus {
+.navbar a, 
+.navbar a:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -227,7 +230,8 @@ h1, h2, h3, h4, h5, h6 {her
   position: relative;
   padding: 6px 4px;
 }
-.navbar a i, .navbar a:focus i {
+.navbar a i, 
+.navbar a:focus i {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
@@ -243,7 +247,10 @@ h1, h2, h3, h4, h5, h6 {her
   visibility: hidden;
   transition: all 0.3s ease-in-out 0s;
 }
-.navbar a:hover:before, .navbar li:hover > a:before, .navbar .active:before {
+.navbar a:hover:before, 
+.navbar li:hover>a:before, 
+.navbar 
+.active:before {
   visibility: visible;
   width: 100%;
 }
